Another fix to dropdown when on mobile

--- a/app/assets/stylesheets/spree/frontend/all.scss
+++ b/app/assets/stylesheets/spree/frontend/all.scss
@@ -86,8 +86,8 @@ footer, .push {
 	background-color: black;
 	background-size: cover;
 	background-repeat: no-repeat;
-	height: 170px;
-	margin-top: -185px;
+	height: 275px;
+	margin-top: -291px;
 	width: 100%;
 }
 
